--- a/build-container/package.json
+++ b/build-container/package.json
@@ -9,6 +9,7 @@
   "author": "Rehan",
   "license": "MIT",
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.738.0"
+    "@aws-sdk/client-s3": "^3.738.0",
+    "kafkajs": "^2.2.4"
   }
 }
