--- a/logs-consumer/package.json
+++ b/logs-consumer/package.json
@@ -11,7 +11,8 @@
   "license": "MIT",
   "dependencies": {
     "dotenv": "^16.4.7",
-    "kafkajs": "^2.2.4"
+    "kafkajs": "^2.2.4",
+    "mongoose": "^8.9.6"
   },
   "devDependencies": {
     "@types/node": "^22.13.0"
