--- a/api-server/package.json
+++ b/api-server/package.json
@@ -16,6 +16,7 @@
     "@types/jsonwebtoken": "^9.0.8",
     "@types/morgan": "^1.9.9",
     "@types/node": "^22.12.0",
+    "@types/ws": "^8.5.14",
     "esbuild": "^0.24.2",
     "prisma": "^6.3.0",
     "typescript": "^5.7.3"
@@ -28,6 +29,8 @@
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
-    "morgan": "^1.10.0"
+    "kafkajs": "^2.2.4",
+    "morgan": "^1.10.0",
+    "ws": "^8.18.0"
   }
 }
