--- a/services/api-server/package.json
+++ b/services/api-server/package.json
@@ -18,11 +18,10 @@
     "@types/node": "^22.12.0",
     "@types/ws": "^8.5.14",
     "esbuild": "^0.24.2",
-    "prisma": "^6.3.0",
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "@prisma/client": "6.3.0",
+    "database": "workspace:^1.0.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
