feat: Add user validation for signup and signin using Zod

--- a/services/api-server/package.json
+++ b/services/api-server/package.json
@@ -21,15 +21,16 @@
     "typescript": "^5.7.3"
   },
   "dependencies": {
-    "database": "workspace:^1.0.0",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
+    "database": "workspace:^1.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "morgan": "^1.10.0",
-    "ws": "^8.18.0"
+    "ws": "^8.18.0",
+    "zod": "^3.24.1"
   }
 }
