feat: Add build project endpoint with queue integration and error handling

--- a/services/api-server/package.json
+++ b/services/api-server/package.json
@@ -22,11 +22,13 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bullmq": "^5.39.1",
     "cors": "^2.8.5",
     "database": "workspace:^1.0.0",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
     "helmet": "^8.0.0",
+    "ioredis": "^5.4.2",
     "jsonwebtoken": "^9.0.2",
     "kafkajs": "^2.2.4",
     "morgan": "^1.10.0",
